clear_code