@@ -1,4 +1,4 @@
-package Controller;
+package Controller.Staff;
 
 import java.io.IOException;
 import java.nio.file.Files;
@@ -15,8 +15,6 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import javax.servlet.http.HttpSession;
 import javax.servlet.http.Part;
-import org.apache.commons.beanutils.BeanUtils;
-import org.apache.commons.io.FilenameUtils;
 
 import Dao.NhanVienDao;
 import Dao.baiVietDao;
@@ -24,87 +22,74 @@ import model.BaiViet;
 import model.Staff;
 
 @MultipartConfig
-@WebServlet({ "/HomeStaffController", "/HomeStaffController/create", "/HomeStaffController/update/*"})
-public class HomeStaffController extends HttpServlet {
+@WebServlet({ "/UpdateBaiVietController", "/UpdateBaiVietController/update" })
+public class UpdateBaiVietController extends HttpServlet {
 	private static final long serialVersionUID = 1L;
+
 	private baiVietDao dao;
 	private BaiViet bv;
 	private NhanVienDao daonv;
-	private baiVietDao bvDAO;
+
 	private List<BaiViet> lst;
 	private Staff f;
 
-	public HomeStaffController() {
+	public UpdateBaiVietController() {
 		this.dao = new baiVietDao();
 		this.daonv = new NhanVienDao();
 		this.bv = new BaiViet();
 		this.lst = new ArrayList<BaiViet>();
-		this.bvDAO = new baiVietDao();
-
 	}
 
 	protected void doGet(HttpServletRequest request, HttpServletResponse response)
 			throws ServletException, IOException {
 
-		findID(request, response);
-		request.getRequestDispatcher("views/Staff/QuanLyBaiVietStaff.jsp").forward(request, response);
+		try {
+			int id = Integer.parseInt(request.getParameter("id"));
+			bv = this.dao.findbyid(id);
+			request.setAttribute("bv", bv);
+
+		} catch (Exception e) {
+			e.printStackTrace();
+		}
+		
+		request.getRequestDispatcher("views/Staff/EditBaiViet.jsp").forward(request, response);
 
 	}
 
 	protected void doPost(HttpServletRequest request, HttpServletResponse response)
 			throws ServletException, IOException {
-
 		response.setContentType("text/html;charset=UTF-8");
 		request.setCharacterEncoding("utf-8");
-		String url = request.getRequestURL().toString();
-		System.out.println(url);
-
-		if (url.contains("create")) {
-			insert(request, response);
-			System.out.println("insert");
-
-		}  else if (url.contains("update")) {
-			int index = Integer.parseInt(request.getParameter("id"));
-			response.sendRedirect(request.getContextPath() + "/UpdateBaiVietController?id=" + index);
-		}
-		findID(request, response);
-	}
-
-	private void findID(HttpServletRequest request, HttpServletResponse response) {
-		
-		HttpSession session = request.getSession();
-		Staff staff = (Staff) session.getAttribute("acountST");
-
-		lst = dao.findIDNV(staff);
-		request.setAttribute("listBV", lst);
-	}
-
-
-	private void insert(HttpServletRequest request, HttpServletResponse response) {
 		try {
+			
 			HttpSession session = request.getSession();
 			Staff staff = (Staff) session.getAttribute("acountST");
+			
 			String realpath = request.getServletContext().getRealPath("/img");
 			Path path = Paths.get(realpath);
 			if (!Files.exists(path)) {
 				Files.createDirectory(path);
 			}
-			Part part = request.getPart("chonAnh");
-			String namefile = Path.of(part.getSubmittedFileName()).getFileName().toString();
-			part.write(Paths.get(realpath.toString(), namefile).toString());
-			bv.setImg(namefile);
-			String mota = request.getParameter("mota");
-			String tieude = request.getParameter("tieuDe");
+			Part part = request.getPart("img");
+			String filenameUpload = part.getSubmittedFileName();
+			if(!"".equals(filenameUpload)) {
+				String namefile = Path.of(filenameUpload).getFileName().toString();
+				part.write(Paths.get(realpath.toString(), namefile).toString());
+				bv.setImg(namefile);
+			}
+					
+			
+			String mota = request.getParameter("noidung");
+			String tieude = request.getParameter("tieude");
 			String link = request.getParameter("link");
-
 			bv.setTen_tieu_de(tieude);
 			bv.setLink(link);
 			bv.setNoi_dung(mota);
 			bv.setStaff(staff);
-
-			dao.insert(bv);
-
-			response.sendRedirect(request.getContextPath() + "/HomeStaffController" + "?success=1");
+			
+			dao.update(bv);
+			
+			response.sendRedirect(request.getContextPath() + "/HomeStaffController"+"?success=1");
 		} catch (Exception e) {
 			e.printStackTrace();
 		}
